--- a/galeria.html
+++ b/galeria.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="css/lightbox.min.css">
     <title>BlackMirrorNosediveGaleria</title>
@@ -11,27 +16,28 @@
             <img src="fotosp/nosedivelogooficial.png" alt="Logo Nosedive">
         </div>
         <nav>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="argumento.html">Argumento</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="criticasyopiniones.html">Criticas y Opiniones</a></li>
-        </ul>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
     </nav>
     </header>
     <section>
-        <article class="principal">
+        <article class="principal2">
             <div>
-                <img src="fotosp/blackmirror.png" alt="blackmirror logo">
-                <h1>Nosedive</h1>
+                <h1>Photo Gallery</h1>
             </div>
         </article> 
     </section>
     <section>
     <article class="galeria">
         <div>
-            <a class="example-image-link" href="fotosp/Nosedive_argumento-3.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="fotosp/Nosediveargumentogaleria.jpg" alt="" /></a>
+            <a class="example-image-link" href="fotosp/argumento.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="fotosp/nosediveargumentogaleria.jpg" alt="" /></a>
             <a class="example-image-link" href="fotosp/naomi.jpg" data-lightbox="example-set" data-title="Or press the right arrow on your keyboard."><img class="example-image" src="fotosp/naomigaleriaof.jpg" alt="" /></a>
             <a class="example-image-link" href="fotosp/LaciePoundoficial.jpg" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="fotosp/LaciePoundoficialmigaleria.jpg" alt=""/></a>
             <a class="example-image-link" href="fotosp/ryanoficial.jpg" data-lightbox="example-set" data-title="The next image in the set is preloaded as you're viewing."><img class="example-image" src="fotosp/ryanoficialmigaleria.jpg" alt="" /></a>
@@ -56,7 +62,3 @@
 <script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap');
-</style>
