--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="estilos.css">
     <title>Black Mirror Nosedive</title>
 </head>
@@ -10,13 +15,15 @@
             <img src="fotosp/nosedivelogooficial.png" alt="Logo Nosedive">
         </div>
         <nav>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="argumento.html">Argumento</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="criticasyopiniones.html">Criticas y Opiniones</a></li>
-        </ul>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
     </nav>
     </header>
 <section>
@@ -26,6 +33,26 @@
             <h1>Nosedive</h1>
         </div>
     </article> 
+    <article class="secundario">
+        <div>
+            <a href="#">
+                <img src="fotosp/curiosidades.jpg" alt="">
+                <h4>Curiosidades</h4>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <img src="fotosp/music.jpg" alt="">
+                <h4>Colores y Estética</h4>
+            </a>
+        </div>
+        <div>
+            <a href="#">
+                <img src="fotosp/fanart.jpg" alt="">
+                <h4>Fan Art</h4>
+            </a>
+        </div>
+    </article>
 </section>
 
 <footer>
@@ -37,7 +64,3 @@
 </footer>
 </body>
 </html>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap');
-            </style>
