--- a/personajes.html
+++ b/personajes.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Spline+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Personajes</title>
 </head>
@@ -10,13 +15,15 @@
             <img src="fotosp/nosedivelogooficial.png" alt="Logo Nosedive">
         </div>
         <nav>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="argumento.html">Argumento</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
                 <li><a href="criticasyopiniones.html">Criticas y Opiniones</a></li>
-        </ul>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
     </nav>
    </header>
    <section>
@@ -25,28 +32,28 @@
      <h2 class="titulo">Personajes</h2>
           </div>
       </article>
-     <article class="secundario">
+     <article class="terciario">
         <div> 
         <a href="#">
-         <img src="fotosp/Susanoficial.jpg" alt="Susanpersonaje">
+         <img src="fotosp/susanpersonaje.jpg" alt="Susanpersonaje">
           <h3>Susan Taylor (Cherry Jones)</h3>
         </a>
      </div>
         <div>
      <a href="#">
-         <img src="fotosp/LaciePoundoficial.jpg" alt="LaciePersonaje">
+         <img src="fotosp/laciepoundpersonaje.jpg" alt="LaciePersonaje">
          <h3>Lacie Pound</h3>
     </a>
 </div>
 <div>
     <a href="#">
-     <img src="fotosp/ryanoficial.jpg" alt="RyanPersonaje">
+     <img src="fotosp/ryanpersonaje.jpg" alt="RyanPersonaje">
     <h3>Ryan Pound (James Norton)</h3>
 </a>
 </div>
 <div>
     <a href="#">
-    <img src="fotosp/naomi.jpg" alt="NaomiPersonaje">
+    <img src="fotosp/naomipersonaje.jpg" alt="NaomiPersonaje">
  <h3>Naomi Jayne Mathesen (Ney Ney) (Alice Eve)</h3>
 </a>
 </div>
@@ -60,7 +67,4 @@
     </footer>    
     </body>
     </html>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap');
-                </style>
+  
