--- a/contacto.html
+++ b/contacto.html
@@ -14,8 +14,8 @@
         <div>
             <img src="fotosp/nosedivelogooficial.png" alt="Logo Nosedive">
         </div>
-        <nav>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <nav id="navegador">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
@@ -58,4 +58,14 @@
 
 </footer>
 </body>
+<script type="text/javascript">
+    function myFunction(){
+     let x = document.getElementById('navegador');
+        if (x.className !== 'responsive'){
+            x.className = 'responsive';
+        } else {
+            x.className = '';
+        }
+    }
+</script>
 </html>
