--- a/personajes.html
+++ b/personajes.html
@@ -14,8 +14,8 @@
         <div>
             <img src="fotosp/nosedivelogooficial.png" alt="Logo Nosedive">
         </div>
-        <nav>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <nav id="navegador">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
@@ -66,5 +66,15 @@
            <p>&copy;Black Mirror Nosedive 2022</p>
     </footer>    
     </body>
+    <script type="text/javascript">
+        function myFunction(){
+         let x = document.getElementById('navegador');
+            if (x.className !== 'responsive'){
+                x.className = 'responsive';
+            } else {
+                x.className = '';
+            }
+        }
+    </script>
     </html>
   
