--- a/argumento.html
+++ b/argumento.html
@@ -43,10 +43,9 @@
 </div>
 </section>
 <footer>
-    <img src="fotosp/redes/instagram.png" alt="Twitter">
-    <img src="fotosp/redes/twitter.png" alt="Youtube">
-       <p>Autor: Guadalupe Alemany </p>
-       <p>&copy;Black Mirror Nosedive 2022</p>
+    <div class="conteinerfooter">
+<p>&copy; Black Mirror Nosedive 2022</p>
+</div>
 </footer>
 </body>
 <script type="text/javascript">
