--- a/index.html
+++ b/index.html
@@ -35,32 +35,30 @@
     </article> 
     <article class="secundario">
         <div>
-            <a href="#">
+            <a href="criticasyopiniones.html">
                 <img src="fotosp/curiosidades.jpg" alt="">
-                <h4>Curiosidades</h4>
+                <h4>Críticas y Opiniones</h4>
             </a>
         </div>
         <div>
-            <a href="#">
-                <img src="fotosp/music.jpg" alt="">
-                <h4>Colores y Estética</h4>
+            <a href="personajes.html">
+                <img src="fotosp/personajes.jpg" alt="">
+                <h4>Personajes</h4>
             </a>
         </div>
         <div>
-            <a href="#">
+            <a href="galeria.html">
                 <img src="fotosp/fanart.jpg" alt="">
-                <h4>Fan Art</h4>
+                <h4>Photo Gallery</h4>
             </a>
         </div>
     </article>
 </section>
 
 <footer>
-<img src="fotosp/redes/instagram.png" alt="Twitter">
-<img src="fotosp/redes/twitter.png" alt="Youtube">
-       <p>Autor: Guadalupe Alemany </p>
-       <p>&copy;Black Mirror Nosedive 2022</p>
-
+    <div class="conteinerfooter">
+<p>&copy; Black Mirror Nosedive 2022</p>
+</div>
 </footer>
 </body>
 <script type="text/javascript">
