--- a/personajes.html
+++ b/personajes.html
@@ -33,38 +33,59 @@
           </div>
       </article>
      <article class="terciario">
-        <div> 
+        <div class="contenedor">  
         <a href="#">
+            <figure>
          <img src="fotosp/susanpersonaje.jpg" alt="Susanpersonaje">
-          <h3>Susan Taylor (Cherry Jones)</h3>
-        </a>
-     </div>
-        <div>
-     <a href="#">
-         <img src="fotosp/laciepoundpersonaje.jpg" alt="LaciePersonaje">
-         <h3>Lacie Pound</h3>
-    </a>
-</div>
-<div>
-    <a href="#">
-     <img src="fotosp/ryanpersonaje.jpg" alt="RyanPersonaje">
-    <h3>Ryan Pound (James Norton)</h3>
+          <div class="capa">
+            <h3>Susan Taylor (Cherry Jones)</h3>
+            <p>Susan Taylor (Cherry Jones), es una camionera que ayuda a Lacie a llegar a al boda. Es una mujer mayor, quien ya no se preocupa por los puntos ni las estrellas. Tiene un puntaje muy baja de 1.4. Perdió a su marido por cáncer, y comparte su historia con Lacie y la ayuda a "abrir los ojos".</p>
+        </div>
+    </figure>
 </a>
 </div>
-<div>
+        <div class="contenedor"> 
+     <a href="#">
+        <figure>
+         <img src="fotosp/laciepoundpersonaje.jpg" alt="LaciePersonaje">
+         <div class="capa">
+            <h3>Lacie Pound</h3>
+            <p>Lacie (Bryce Dallas Howard), joven obsesionada por sus calificaciones, tiene un puntaje de 4.2, y es determinada a mantenerlo y aumentarlo. Es elegida por una popular amiga de la infancia (Alice Eve) como dama de honor de su futura boda.</p>
+        </div>
+    </figure>
+   
+</a>
+</div>
+<div class="contenedor"> 
     <a href="#">
+        <figure>
+     <img src="fotosp/ryanpersonaje.jpg" alt="RyanPersonaje">
+    <div class="capa">
+        <h3>Ryan Pound (James Norton)</h3>
+        <p>Ryan Pound (James Norton) es el hermano de Lacy. Vive con ella, y a diferencia de su hermana, no le interesa mantener su reputación o su punatje alto. Tiene una calificación de 3.7.</p>
+    </div>
+</figure>
+</a>
+</div>
+<div class="contenedor"> 
+    <a href="#">
+        <figure>
     <img src="fotosp/naomipersonaje.jpg" alt="NaomiPersonaje">
- <h3>Naomi Jayne Mathesen (Ney Ney) (Alice Eve)</h3>
+ <div class="capa">
+    <h3>Naomi Jayne Mathesen (Ney Ney) (Alice Eve)</h3>
+    <p>Naomi (Alice Eve), es amiga de la infancia de Lacie. Tiene un puntaje alto, de 4.8, y una muy buena reputación. Se contacta luego de mucho tiempo con Lacie para pedirle que asista a su boda.
+        </p>
+</div>
+</figure>
 </a>
 </div>
      </article>
     </section>
     <footer>
-        <img src="fotosp/redes/instagram.png" alt="Twitter">
-        <img src="fotosp/redes/twitter.png" alt="Youtube">
-           <p>Autor: Guadalupe Alemany </p>
-           <p>&copy;Black Mirror Nosedive 2022</p>
-    </footer>    
+        <div class="conteinerfooter">
+    <p>&copy; Black Mirror Nosedive 2022</p>
+    </div>
+    </footer>   
     </body>
     <script type="text/javascript">
         function myFunction(){
