--- a/contacto.html
+++ b/contacto.html
@@ -51,11 +51,9 @@
 </section>
 
 <footer>
-<img src="fotosp/redes/instagram.png" alt="Twitter">
-<img src="fotosp/redes/twitter.png" alt="Youtube">
-       <p>Autor: Guadalupe Alemany </p>
-       <p>&copy;Black Mirror Nosedive 2022</p>
-
+    <div class="conteinerfooter">
+<p>&copy; Black Mirror Nosedive 2022</p>
+</div>
 </footer>
 </body>
 <script type="text/javascript">
