--- a/criticasyopiniones.html
+++ b/criticasyopiniones.html
@@ -58,12 +58,11 @@
     </div>
 </article>
     </section>
-<footer>
-    <img src="fotosp/redes/instagram.png" alt="Twitter">
-    <img src="fotosp/redes/twitter.png" alt="Youtube">
-    <p>Autor: Guadalupe Alemany </p>
-    <p>&copy;Black Mirror Nosedive 2022</p>
-</footer>
+    <footer>
+        <div class="conteinerfooter">
+    <p>&copy; Black Mirror Nosedive 2022</p>
+    </div>
+    </footer>
 </body>
 <script type="text/javascript">
     function myFunction(){
