--- a/galeria.html
+++ b/galeria.html
@@ -54,10 +54,9 @@
     </article> 
 </section>
 <footer>
-    <img src="fotosp/redes/instagram.png" alt="Twitter">
-    <img src="fotosp/redes/twitter.png" alt="Youtube">
-       <p>Autor: Guadalupe Alemany </p>
-       <p>&copy;Black Mirror Nosedive 2022</p>
+    <div class="conteinerfooter">
+<p>&copy; Black Mirror Nosedive 2022</p>
+</div>
 </footer>
 <script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
