--- a/personajes.html
+++ b/personajes.html
@@ -39,7 +39,7 @@
          <img src="fotosp/susanpersonaje.jpg" alt="Susanpersonaje">
           <div class="capa">
             <h3>Susan Taylor (Cherry Jones)</h3>
-            <p>Susan Taylor (Cherry Jones), es una camionera que ayuda a Lacie a llegar a al boda. Es una mujer mayor, quien ya no se preocupa por los puntos ni las estrellas. Tiene un puntaje muy baja de 1.4. Perdió a su marido por cáncer, y comparte su historia con Lacie y la ayuda a "abrir los ojos".</p>
+            <p>Susan Taylor es una camionera que ayuda a Lacie a llegar a la boda. Es una mujer mayor, quien ya no se preocupa por los puntos ni las estrellas. Tiene un puntaje muy bajo de 1.4. Perdió a su marido por cáncer, y comparte su historia con Lacie y la ayuda a "abrir los ojos".</p>
         </div>
     </figure>
 </a>
@@ -50,7 +50,7 @@
          <img src="fotosp/laciepoundpersonaje.jpg" alt="LaciePersonaje">
          <div class="capa">
             <h3>Lacie Pound</h3>
-            <p>Lacie (Bryce Dallas Howard), joven obsesionada por sus calificaciones, tiene un puntaje de 4.2, y es determinada a mantenerlo y aumentarlo. Es elegida por una popular amiga de la infancia (Alice Eve) como dama de honor de su futura boda.</p>
+            <p>Lacie, joven obsesionada por sus calificaciones, tiene un puntaje de 4.2, y es determinada a mantenerlo y aumentarlo. Es elegida por una popular amiga de la infancia (Alice Eve) como dama de honor de su futura boda.</p>
         </div>
     </figure>
    
@@ -62,7 +62,7 @@
      <img src="fotosp/ryanpersonaje.jpg" alt="RyanPersonaje">
     <div class="capa">
         <h3>Ryan Pound (James Norton)</h3>
-        <p>Ryan Pound (James Norton) es el hermano de Lacy. Vive con ella, y a diferencia de su hermana, no le interesa mantener su reputación o su punatje alto. Tiene una calificación de 3.7.</p>
+        <p>Ryan Pound es el hermano de Lacy. Vive con ella, y a diferencia de su hermana, no le interesa mantener su reputación o su punatje alto. Tiene una calificación de 3.7.</p>
     </div>
 </figure>
 </a>
@@ -73,7 +73,7 @@
     <img src="fotosp/naomipersonaje.jpg" alt="NaomiPersonaje">
  <div class="capa">
     <h3>Naomi Jayne Mathesen (Ney Ney) (Alice Eve)</h3>
-    <p>Naomi (Alice Eve), es amiga de la infancia de Lacie. Tiene un puntaje alto, de 4.8, y una muy buena reputación. Se contacta luego de mucho tiempo con Lacie para pedirle que asista a su boda.
+    <p>Naomi es amiga de la infancia de Lacie. Tiene un puntaje alto, de 4.8, y una muy buena reputación. Se contacta luego de mucho tiempo con Lacie para pedirle que asista a su boda.
         </p>
 </div>
 </figure>
