--- a/galeria.html
+++ b/galeria.html
@@ -55,7 +55,7 @@
 </section>
 <footer>
     <div class="conteinerfooter">
-<p>&copy; Black Mirror Nosedive 2022</p>
+<p>&copy; Black Mirror Nosedive 2022. Autor: Guadalupe Alemany.</p>
 </div>
 </footer>
 <script src="js/lightbox-plus-jquery.min.js"></script>
