--- a/argumento.html
+++ b/argumento.html
@@ -44,7 +44,7 @@
 </section>
 <footer>
     <div class="conteinerfooter">
-<p>&copy; Black Mirror Nosedive 2022</p>
+<p>&copy; Black Mirror Nosedive 2022 Autor: Guadalupe Alemany</p>
 </div>
 </footer>
 </body>
