--- a/contacto.html
+++ b/contacto.html
@@ -52,7 +52,7 @@
 
 <footer>
     <div class="conteinerfooter">
-<p>&copy; Black Mirror Nosedive 2022</p>
+<p>&copy; Black Mirror Nosedive 2022. Autor: Guadalupe Alemany.</p>
 </div>
 </footer>
 </body>
