--- a/argumento.html
+++ b/argumento.html
@@ -38,13 +38,12 @@
     a cinco estrellas, registra las valoraciones y elabora un ranking público determinante 
     en el estatus social.
    </p>
-   <button>Escenas relevantes</button>
 </div>
 </div>
 </section>
 <footer>
     <div class="conteinerfooter">
-<p>&copy; Black Mirror Nosedive 2022 Autor: Guadalupe Alemany</p>
+<p>&copy; Black Mirror Nosedive 2022. Autor: Guadalupe Alemany.</p>
 </div>
 </footer>
 </body>
