--- a/galeria.html
+++ b/galeria.html
@@ -30,6 +30,7 @@
     <section>
         <article class="principal2">
             <div>
+                <img src="fotosp/logogaleria.png" alt="blackmirror logo">
                 <h1>Photo Gallery</h1>
             </div>
         </article> 
