--- a/argumento.html
+++ b/argumento.html
@@ -16,7 +16,7 @@
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         <nav id="navegador">
-            <ul>
+            <ul class="opciones">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="argumento.html">Argumento</a></li>
