--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         <nav id="navegador">
-            <ul>
+            <ul class="opciones">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="argumento.html">Argumento</a></li>
@@ -45,6 +45,7 @@
             </form>
         </div>
         <div>
+            
             <img src="fotosp/contactofoto.jpg">
         </div>
     </article> 
