--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
             <a href="criticasyopiniones.html">
                 <img src="fotosp/curiosidades.jpg" alt="">
-                <h4>Críticas y Opiniones</h4>
+                <h4>Críticas/Opiniones</h4>
             </a>
         </div>
         <div>
@@ -49,7 +49,7 @@
         <div>
             <a href="galeria.html">
                 <img src="fotosp/fanart.jpg" alt="">
-                <h4>Photo Gallery</h4>
+                <h4>PhotoGallery</h4>
             </a>
         </div>
     </article>
